examples/negative/silent_contract/ffi_call_no_capability.kai
# Silent contract (#511 audit): docs/design.md §Baseline architecture
# pins FFI behind the `Ffi` capability. `main : Unit` (pure row)
# calls `puts() / Ffi` and is accepted today — the `Ffi` effect
# fails to propagate into main's row.

extern "C" fn puts(s: String) : Int / Ffi

fn main() : Unit = {
  let _ = puts("hi")
  ()
}
